Removed broken api endpoint

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -14,9 +14,9 @@ const discordIcon = 'ic:baseline-discord'; // The icon name from Iconify
             <Image src={Logo} alt="Logo" class="max-w-[150px] mr-8" />
         </a>
         </div>
-        <div class="flex gap-6">
-            <a href="" class="">Servers</a>
-            <a href="" class="">News</a>
+        <div class="flex gap-3">
+            <a href="" class="py-2 px-4 rounded-md hover:bg-primary hover:text-[#e2e8f0]">Servers</a>
+            <a href="" class="py-2 px-4 rounded-md hover:bg-primary hover:text-[#e2e8f0]">News</a>
         </div>
         <div class="ml-auto">
             <a href="https://discord.gg/relaxca" target="_blank">
