--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -14,8 +14,8 @@ const discordIcon = 'ic:baseline-discord'; // The icon name from Iconify
         </a>
         </div>
         <div class="flex gap-3">
-            <a href="" class="py-2 px-4 rounded-md hover:bg-primary hover:text-[#e2e8f0]">Servers</a>
-            <a href="" class="py-2 px-4 rounded-md hover:bg-primary hover:text-[#e2e8f0]">News</a>
+            <a href="" class="py-2 px-4 rounded-md hover:bg-primary hover:text-[#e2e8f0] transition-colors">Servers</a>
+            <a href="" class="py-2 px-4 rounded-md hover:bg-primary hover:text-[#e2e8f0] transition-colors">News</a>
         </div>
         <div class="ml-auto">
             <a href="https://discord.gg/relaxca" target="_blank">
