--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -2,8 +2,8 @@
 import { Image } from 'astro:assets';
 import Logo from '../../public/images/Logo.png';
 import { Button } from '@/components/ui/button';
-const iconClass = 'iconify'; // Class used by Iconify to apply icons
-const discordIcon = 'ic:baseline-discord'; // The icon name from Iconify
+const iconClass = 'iconify';
+const discordIcon = 'ic:baseline-discord';
 ---
 
 <header class="flex items-center border-b-[1px] border-zinc-800">
