--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,16 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '@/components/header.astro';
 import Hero from '@/components/hero.astro';
+import Footer from '@/components/footer.astro';
 import '@/styles/globals.css'
 ---
 
 <Layout title="QuakeHub | Your Quake Hub">
 	<Header />
-	<div class="wrapper">
 	<Hero />
+	<div class="wrapper">
 	</div>
+	<Footer />
 </Layout>
 
 <style>
