--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,23 +4,39 @@ import Logo from '../../public/images/Logo.png';
 import { Button } from '@/components/ui/button';
 const iconClass = 'iconify';
 const discordIcon = 'ic:baseline-discord';
+const chevron = 'ei:chevron-down';
 ---
 
 <header class="flex items-center border-b-[1px] border-zinc-800">
-    <nav class="w-full mx-auto max-w-[1440px] p-4 flex items-center">
+    <nav class="w-full mx-auto max-w-[1440px] p-2 flex items-center">
         <div class="">
-            <a href="/" class="opacity-1 hover:opacity-70 transition-opacity duration-500">
-            <Image src={Logo} alt="Logo" class="max-w-[150px] mr-8" />
+            <a href="/" class="flex item-center opacity-1 hover:opacity-70 transition-opacity duration-500">
+            <Image src={Logo} alt="Logo" class="max-w-[30px] mr-2" />
+            <span class="flex items-center font-bold">QaukeHub</span>
         </a>
         </div>
-        <div class="flex gap-3">
-            <a href="" class="py-2 px-4 rounded-md hover:bg-primary hover:text-[#e2e8f0] transition-colors">Servers</a>
-            <a href="" class="py-2 px-4 rounded-md hover:bg-primary hover:text-[#e2e8f0] transition-colors">News</a>
+        <div class="flex gap-5 ml-auto">
+        <div class="flex gap-5 items-center">
+            <a href="" class="text-sm transition-colors">Servers</a>
+            <a href="" class="text-sm transition-colors">News</a>
+            <a href="" class="flex items-center text-sm hover:text-[#a0a0a0] transition-colors">Resources
+                <span class={iconClass}  data-icon={chevron} data-inline="false" style="font-size: 25px;"></span>    
+            </a>
         </div>
-        <div class="ml-auto">
+        <div class="qh-nav-separator"></div>
+        <div class="">
             <a href="https://discord.gg/relaxca" target="_blank">
-            <Button className="gap-1 font-medium"><span class={iconClass} data-icon={discordIcon} data-inline="false" style="font-size: 24px; color: #fff;"></span>Join our Discord!</Button>
+            <span class={iconClass}  data-icon={discordIcon} data-inline="false" style="font-size: 24px;"></span>
         </a>
         </div>
+    </div>
     </nav>
 </header>
+
+<style>
+    .qh-nav-separator {
+        height: 25px;
+        background: #27272a;
+        width: 1px;
+    }
+</style>
