Added serverlist sample

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import Logo from '../../public/images/Logo.png';
+import Logo from '/public/images/Logo.png';
 import { Button } from '@/components/ui/button';
 const iconClass = 'iconify';
 const discordIcon = 'ic:baseline-discord';
