--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -5,8 +5,8 @@ const arrowIcon = "ri:arrow-right-line";
 
 <section class="relative flex justify-center text-center p-48">
   <div class="absolute inset-0 z-0 w-full h-full overflow-hidden">
-    <video class="absolute top-0 left-0 w-full h-full object-cover" autoplay muted loop>
-      <source src="/public/video/hero-intro.webm" type="video/webm" />
+    <video class="absolute top-0 left-0 w-full h-full object-cover opacity-15" autoplay muted loop>
+      <source src="/video/hero-intro.webm" type="video/webm" />
       Your browser does not support the video tag.
     </video>
     <div class="absolute inset-0 bg-gradient-to-t from-[#09090b] via-transparent to-transparent"></div>
