--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '@/components/header.astro';
 import Hero from '@/components/hero.astro';
+import Serverlist from '@/components/serverlist.astro';
 import Footer from '@/components/footer.astro';
 import '@/styles/globals.css'
 ---
@@ -10,6 +11,7 @@ import '@/styles/globals.css'
 	<Header />
 	<Hero />
 	<div class="wrapper">
+	<Serverlist />
 	</div>
 	<Footer />
 </Layout>
